Add seq to root node in proofs (#82)
