# src/openapi/specs/getCompressedBalanceByOwner.yaml
@@ -232,6 +232,7 @@ components:
       - leafIndex
       - hash
       - merkleTree
+      - rootSeq
       properties:
         hash:
           $ref: '#/components/schemas/Hash'
@@ -245,6 +246,10 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Hash'
+        rootSeq:
+          type: integer
+          format: int64
+          minimum: 0
       additionalProperties: false
     PaginatedAccountList:
       type: object
